fix alignment

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -929,7 +929,7 @@
 			h1 {
 				background-color: rgba(0,0,0,0.5);
 				padding: 1.2rem;
-				border-radius: 20px;
+				border-radius: 10px;
 				text-align: center;
 			}
 		}
@@ -951,7 +951,7 @@
 
 		.image.avatar {
 			margin: 0 0 (_size(element-margin) * 0.5) 0;
-			width: 6.25em;
+			width: 8.25em;
 		}
 	}
 
@@ -1422,7 +1422,6 @@
 					}
 				}
 			}
-
 	}
 
 /* XSmall */
@@ -1512,7 +1511,7 @@
 
 .projects {
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	flex-wrap: wrap;
 }
 
@@ -1526,14 +1525,18 @@
 .Workcard {
     width: 275px;
     padding: 10px;
-    margin: 1rem;
+    margin: 10px 10px;
     box-shadow: 7px 10px 12px -5px rgba(0,0,0,0.56);
     text-align: center;
     background-color: rgb(248, 248, 248);
 	border-radius: 3px;
 	transition: .5s ease-in-out;
 	h2 {
+		font-weight: bold;
 		margin-bottom: 0;
+		background-color: rgb(200, 200, 200);
+		border-radius: 5px;
+		border: 1px solid black;
 	}
 }
 
